# compiler

./: .cproject  .gitignore  .project  CMakeLists.txt  ENTRADA.txt  Makefile  README.md  example.c  language_spec.txt  new_rules.wirth  rules.bnf  rules.jflaps  rules.wirth  test.cmm  valgrind.sh
Debug/: makefile  sources.mk  subdir.mk  test.cmm
Debug/src/source/: subdir.mk
src/include/: lex.h  semantic.h  symbol_table.h  syntatic.h  tables.h  token.h  utils.h
src/source/: lex.c  main.c  semantic.c  symbol_table.c  syntatic.c  tables.c  token.c
